# GEMM

./: .gitignore  CMakeLists.txt  benchmark.cu
inc/: launch.h  util.cuh
src/: bench.cu  cublas_gemm.cu  device_info.cu  gemm.cu  naive_gemm.cu  tiled_gemm.cu
src/adv/: gemm128x128x8.cuh  helper.cuh
src/basic/: naive_gemm.cuh  optimum_tiled_gemm.cuh
src/cublas/: cublas_gemm.cuh
src/cute/: sgemm_cute_naive.cuh
src/mma/: common.cuh  hgemm_m16n8k16.cuh  mma_gemm_naive_fp16.cuh
src/wmma/: wmma_gemm_naive_fp16.cuh
